Fixed banner text alignment for iPhones

--- a/style.css
+++ b/style.css
@@ -222,8 +222,8 @@ footer.second {
   }
   .banner-inner {
     color: #000000;
-    font-size: 105%;
-    max-width: 300px;
+    max-width: 270px;
+    font-size: 95%;
     text-align: justify;
     margin: 0 auto;
   }
